--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.html
@@ -7,7 +7,7 @@
     <button class="botao-editar">
       <img src="../../../../assets/imagens/icone-editar.png" alt="Icone Editar">
     </button>
-    <button class="botao-excluir">
+    <button class="botao-excluir" routerLink="/pensamentos/exlcuirPensamento/{{pensamento.id}}">
       <img src="../../../../assets/imagens/icone-excluir.png" alt="Icone excluir">
     </button>
   </div>
