--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -3,20 +3,31 @@
     <h2>Adicione um <br>pensamento novo:</h2>
   </header>
 
-  <form>
+  <form [formGroup]="formulario">
     <label for="pensamento">Pensamento</label>
-    <input type="textarea" class="input" id="pensamento" name="pensamento" placeholder="Digite o pensamento" [(ngModel)]="pensamento.conteudo">
+    <input type="textarea" class="input" id="pensamento" formControlName="conteudo" placeholder="Digite o pensamento">
 
+    <div class="mensagem__erro" *ngIf="formulario.get('conteudo')?.errors && formulario.get('conteudo')?.touched">
+      Pensamento é Obrigatórtio!
+    </div>
 
     <label for="autoria">Autor(a) ou fonte</label>
-    <input type="text" class="input" id="autoria" name="autoria" placeholder="Digite a autoria ou fonte:" [(ngModel)]="pensamento.autoria">
+    <input type="text" class="input" id="autoria" formControlName="autoria" placeholder="Digite a autoria ou fonte:">
+
+    <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['required'] && formulario.get('autoria')?.touched" >
+      Autoria é Obrigatórtio!
+    </div>
+
+    <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['minlength'] && formulario.get('autoria')?.touched">
+      Autoria precisa ter no miniemo 3 caracteres!
+    </div>
 
     <label for="modelo">Selcione o modelo do card:</label>
     <div class="container-radio">
 
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" name="modelo-card" [(ngModel)]="pensamento.modelo"/>
+          <input type="radio" id="modelo1" value="modelo1" formControlName="modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -25,14 +36,14 @@
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo1.png" alt="Aspas Azuis">
-          <p class="conteudo">{{pensamento.conteudo}}</p>
-          <p class="autoria"><b>{{pensamento.autoria}}</b></p>
+          <p class="conteudo">{{formulario.get('conteudo')?.value}}</p>
+          <p class="autoria"><b>{{formulario.get('autoria')?.value}}</b></p>
         </div>
       </div>
 
       <div class="radio-modelo">
         <label for="modelo2">
-          <input type="radio" id="modelo2" value="modelo2" name="modelo-card" [(ngModel)]="pensamento.modelo"/>
+          <input type="radio" id="modelo2" value="modelo2" formControlName="modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -41,14 +52,14 @@
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo2.png" alt="Aspas Azuis Claro">
-          <p class="conteudo">{{pensamento.conteudo}}</p>
-          <p class="autoria"><b>{{pensamento.autoria}}</b></p>
+          <p class="conteudo">{{formulario.get('conteudo')?.value}}</p>
+          <p class="autoria"><b>{{formulario.get('autoria')?.value}}</b></p>
         </div>
       </div>
 
       <div class="radio-modelo">
         <label for="modelo3">
-          <input type="radio" id="modelo3" value="modelo3" name="modelo-card" [(ngModel)]="pensamento.modelo"/>
+          <input type="radio" id="modelo3" value="modelo3" formControlName="modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -57,13 +68,13 @@
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verde">
-          <p class="conteudo">{{pensamento.conteudo}}</p>
-          <p class="autoria"><b>{{pensamento.autoria}}</b></p>
+          <p class="conteudo">{{formulario.get('conteudo')?.value}}</p>
+          <p class="autoria"><b>{{formulario.get('autoria')?.value}}</b></p>
         </div>
       </div>
     </div>
     <div class="acoes">
-      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button [disabled]="!formulario.valid" (click)="criarPensamento()" [ngClass]="habilitarBotao()">Salvar</button>
       <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
