botao carregar mais adicionado

--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -9,6 +9,9 @@
     </div>
   </div>
 </section>
+<app-botao-carregar-mais [haMaisPensamentos]="haMaisPensamentos" (click)="carregarMaisPensaemantos()">
+
+</app-botao-carregar-mais>
 <ng-template #semPesnamentos>
   <div class="ff-inter sem-pensamentos">
     <p>Ainda não há pensamentos cadastrados</p>
