--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -1,5 +1,9 @@
 <section class="container">
   <header class="header d-flex">
+    <div class="buscar-pensamentos">
+      <input type="search" class="filtro" placeholder="O que você procura?" [(ngModel)]="filtro" (keyup)="pesquisarPensamentos()" autofocus>
+      <img src="../../../../assets/imagens/lupa.png" alt="Lupa Azul">
+    </div>
     <h2 class="ff-inter">Meu Mural</h2>
     <button routerLink="/criarPensamento" class="botao">Adicoinar Pensamento</button>
   </header>
