--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -4,16 +4,20 @@
       <input type="search" class="filtro" placeholder="O que você procura?" [(ngModel)]="filtro" (keyup)="pesquisarPensamentos()" autofocus>
       <img src="../../../../assets/imagens/lupa.png" alt="Lupa Azul">
     </div>
-    <h2 class="ff-inter">Meu Mural</h2>
-    <button routerLink="/criarPensamento" class="botao">Adicoinar Pensamento</button>
+    <h2 class="ff-inter">{{titulo}}</h2>
+    <div class="botoes">
+      <button class="botao" (click)="recarregarCompoentes()">Meu Mural</button>
+      <button class="botao" (click)="mostraFavoritos()">Meus Favoritos</button>
+      <button routerLink="/criarPensamento" class="botao">Novo Pensamento</button>
+    </div>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPesnamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento [pensamento]="pensamento" [listaFavoritos]="listaFavoritos"></app-pensamento>
     </div>
   </div>
 </section>
-<app-botao-carregar-mais [haMaisPensamentos]="haMaisPensamentos" (click)="carregarMaisPensaemantos()">
+<app-botao-carregar-mais [haMaisPensamentos]="haMaisPensamentos" (click)="carregarMaisPensamentos()">
 
 </app-botao-carregar-mais>
 <ng-template #semPesnamentos>
